--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-    <link rel="stylesheet" href="app.css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Minimalist Page</title>
+        <link rel="stylesheet" href="style.css">   
+      
 </head>
 <body>
     <h1>TEST</h1>
