--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-        <link rel="stylesheet" href="style.css">   
-      
+  <title>Dawg website</title>
+  <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <header>
-        <h1>TEST</h1>
+  <header class="header-footer">
     </header>
+  <main>
+    <section class="content-section">
+      </section>
+  </main>
+  <footer class="header-footer">
+    </footer>
 </body>
 </html>
