--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<h2>VALORANT</h2>
 									<p>Valorant Stats for my main account</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">GO</a></li>
+										<li><a href="val.html" class="button">GO</a></li>
 									</ul>
 								</div>
 							</div>
