updated for separate pages

--- a/hsr.html
+++ b/hsr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Generic - Stat tracker</title>
+		<title>HSR - Build tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="genshin.html" class="active">Generic</a></li>
+						<li><a href="generic.html" class="active">Games</a></li>
 						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
@@ -27,10 +27,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Genshin</h1>
-							<iframe src="https://enka.network/u/713873794/" width="1150" height="750"></iframe>
+							<h1 class="major">Honkai:Star Rail</h1>
+							<iframe src="https://enka.network/hsr/800543711/" width="1150" height="750"></iframe>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
-							<p>we making it big with this one rrahh.</p>
+							<p>firefly is my wife thanks</p>
 							<p>Bottom text</p>
 						</div>
 					</section>
