--- a/generic.html
+++ b/generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Valorant - Stat tracker</title>
+		<title>Genshin - Build tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,10 +27,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">VALORANT</h1>
-							<iframe src="https://tracker.gg/valorant/profile/riot/kanna%23xdcat/overview" width="1150" height="750"></iframe>
+							<h1 class="major">Genshin Impact</h1>
+							<iframe src="https://enka.network/u/713873794/" width="1150" height="750"></iframe>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
-							<p>we making it big with this one rrahh.</p>
+							<p>KACHINA is my doter.</p>
 							<p>Bottom text</p>
 						</div>
 					</section>
