--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<h2>Honkai: Star Rail</h2>
 									<p>Star Rail Builds</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">GO</a></li>
+										<li><a href="hsr.html" class="button">GO</a></li>
 									</ul>
 								</div>
 							</div>
@@ -82,7 +82,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Nothing.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
